--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -663,7 +663,7 @@ ATTACHE_LIST:0 "We received military attachés from $LIST$. And they give us the
  limited_interventionism:0 "Limited Interventionism"
  lend_lease_idea:0 "Lend Lease"
  arsenal_of_democracy:0 "Arsenal of Democracy"
- GER_ace_idea:0 "German Ace Initiative"
+ GER_ace_idea:0 "Luftwaffe"
  GER_ace_idea_desc:0 "During the war, the German Luftwaffe trained their pilots to a much longer degree then the Allies. Allied pilots were also rotated out, often being sent home after a certain number of tours, thus leading to a much higher proportion of veteren German pilots in the skies."
  GER_rocketry_idea:0 "German Rocketry"
  triumphant_will:0 "Totaler Krieg!"
