--- a/localisation/PFU_events_l_english.yml
+++ b/localisation/PFU_events_l_english.yml
@@ -112,7 +112,7 @@
  pfu.34.t:0 "Defense of Stalingrad"
  pfu.34.d:0 "The invasion of our country has revitalized our country's unity. Several nationalistic units have spawned in order to defend of one of our most vital cities "
  pfu.34.a:0 "Form the divisions"
- pfu.35.t:0 "Mussolini Declares on France and Great Britian"
+ pfu.35.t:0 "Declear war on Allies"
  pfu.35.d:0 "On this day, after withholding formal allegiance to either side in the battle between Germany and the Allies, Benito Mussolini, dictator of Italy, declares war on France and Great Britain."
  pfu.35.a:0 "Give me that Free land"
  pfu.36.t:0 "Total War in Germany"
@@ -124,6 +124,10 @@
  pfu.38.t:0 "Albert Speer Industry Reforms"
  pfu.38.d:0 "Albert Speer recent Industry reforms and our new Panther tanks allows us to now build new generation equipment without losing too much efficency"
  pfu.38.a:0 "Will this push us over the edge?"
+ pfu.355:0 "Spain shall rule!"
+ pfu.355.t:0 "Spain shall rule!"
+ pfu.355.a:0 "To Arms!"
+ pfu.355.d:0 "Time for glory is upon us, unit brothers and recreate Spanish Empire!"
  pfu.14.a.tt:0 "Spawns 11 infantry divisions and 1 tank division along the Wolga river"
  pfunews.1.t:0 "Danish Islands Transfer Sovereignty"
  pfunews.1.d:0 "Diplomats from the United Kingdom and United States have announced that the Danish Islands in the Arctic Circle have been occupied. Questions were raised regarding the legality of this decision but both dignatories have insisted this was done to preempt a possible German Invasion."
