--- a/localisation/Spain_l_english.yml
+++ b/localisation/Spain_l_english.yml
@@ -94,24 +94,18 @@
  SPR_OIL_4_desc:0 "Let build more Refineries"
  SPR_OIL_5:0 "Build Refineries 2"
  SPR_OIL_5_desc:0 "Let build more Refineries"
- SPR_Air_Officers:0 "Expand Airforce Academies"
- SPR_Air_Officers_desc:0 "If we are to expand our airforce, we must make sure that more bright young men are trained in how to fly and how to lead. We should build more academies for our airforce!"
- SPR_Air_Officers_short_desc:0 "Expand Academies"
- SPR_Air_Factories:0 "State Owned Aircraft Factories"
- SPR_Air_Factories_desc:0 "We should expand our production capacity by building new factories designed to build aircraft."
- SPR_Air_Factories_short_desc:0 "Aircraft Factories"
- SPR_Fighters:0 "Develop New Fighter Aircraft"
- SPR_Fighters_desc:0 "Regardless of what kind of bomber we will choose, we must develop and produce figher aircraft. CASA, our fighter aircraft designer should be put to the task of creating a new fighter which will be able to keep up with foreign designs."
- SPR_Fighters_short_desc:0 "Develop Fighters"
- SPR_CAS:0 "Close Air Support Effort"
- SPR_CAS_desc:0 "Our generals are convinced that battlefield support will help us win any war. The enemy can produce all the equipment they want, but if we destroy it on the battlefield it will be of no use!"
- SPR_CAS_short_desc:0 "CAS"
- SPR_Tac_Bomber:0 "Tactical Bomber Effort"
- SPR_Tac_Bomber_desc:0 "Some in our aiforce believe that tactical bombers are the way forward. They can perform battlefield support duties, but can also bomb enemy factories, albeit not as effectively as strategic bombers."
- SPR_Tac_Bomber_short_desc:0 "TAC"
- SPR_Strat:0 "Strategic Bomber Effort"
- SPR_Strat_desc:0 "Some are convinced that strategic destruction of enemy factories will eventually cause the enemy to wear down, allowing us to win. We could develop aircraft capable of this, although some officials doubt our capacity to produce them in great enough numbers."
- SPR_Strat_short_desc:0 "Strat"
+ SPR_Air_Officers:0 "Develop Armor Tactics"
+ SPR_Air_Officers_desc:0 "During civil war, we kept close eye on german panzer tactics and now is the time to convert that info into tactics"
+ SPR_Air_Factories:0 "First War Economy Buildup"
+ SPR_Air_Factories_desc:0 "We should expand our production capacity by building new factories designed to build armored monsters"
+ SPR_Fighters:0 "Second War Economy Buildup"
+ SPR_Fighters_desc:0 "We should expand our production capacity by building new factories designed to build armored monsters"
+ SPR_CAS:0 "Spain Shall Rule!"
+ SPR_CAS_desc:0 "Lets join our brothers in arms and purge the scourge from the holy european lands!"
+ SPR_Tac_Bomber:0 "Support the Axis Cause"
+ SPR_Tac_Bomber_desc:0 "We are not strong enough to fight the allied warmachine, but we want to support germany in his efforts"
+ SPR_Strat:0 "Volunteer Corps"
+ SPR_Strat_desc:0 "Help Germany without risking ourselfs"
  SPR_Air_Doctrine:0 "Develop CAS Doctrines"
  SPR_Air_Doctrine_desc:0 "Now that we've settled on what kind of bomber aircraft to focus on, we should adapt our doctrines accordingly."
  SPR_Air_Doctrine_short_desc:0 "Air Doctrines"
