--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -1453,7 +1453,7 @@
  CAN_victory_aircraft_limited_desc:0 "Victory Aircraft has been tasked with building Canada’s bomber fleet. Lancasters for everyone!"
  CAN_alberta_coal_towns:0 "Alberta Coal Towns"
  CAN_alberta_coal_towns_desc:0 "There are coal deposits all along the Rockies ready to be exploited. We can promote emigration to these new mine locations and improve employment in the west."
- CAN_commit_to_the_war:0 "Canadian Armored Corps"
+ CAN_commit_to_the_war:0 "Armor Corps"
  CAN_commit_to_the_war_desc:0 "The world is burning and Canada has a role to play. We vow to protect democracy and the British way of life."
  CAN_john_inglis_and_company:0 "John Inglis and Company"
  CAN_john_inglis_and_company_desc:0 "John Inglis and Company should be directed to build new machine guns and cannon for the Canadian army."
