--- a/localisation/misterjaypfu_decisions_l_english.yml
+++ b/localisation/misterjaypfu_decisions_l_english.yml
@@ -26,3 +26,4 @@
     puppet_vichy_france_desc:0 "Use this when something goes wrong and Vichy France does not end up as a puppet or if Vichy France is a player."
     annex_tunisia:0 "Occupy Tunisia"
     sportpalast:0 "Sportpalast Speech"
+    AST_sell_pig_iron:0 "Sell Iron to Japan"
