--- a/localisation/misterjaypfu_events_l_english.yml
+++ b/localisation/misterjaypfu_events_l_english.yml
@@ -38,3 +38,32 @@
     JFU_germany.22.d:0 "The UK couldn't agree on our peace offer."
     JFU_germany.22.a:0 "Too bad."
     apitulate_to_allies:0 "Surrender to the Allies"
+
+
+australia_DSB.1.t:0 "Lyon's Passes Away"
+australia_DSB.1.d:0 "On 5 April 1939, Lyons suffered a heart attack while being driven from Melbourne to Sydney. It occurred shortly after he had stopped in at Goulburn to collect his son Kevin from St Patrick's College for the Easter holidays. Lyons was rushed to St Vincent's Hospital, Darlinghurst, in a critical condition. By the following day, he was unable to speak and was drifting in and out of consciousness. He soon fell into a coma, and died on the morning of 7 April."
+australia_DSB.1.a:0 "Robert Menzies will take his place"
+australia_DSB.2.t:0 "Fadden Assumes Leadership"
+australia_DSB.2.d:0 "In August 1941 Robert Menzies resigned as Prime Minister. Although the non-Labor Coalition had been in power for a decade, the UAP was so bereft of leadership that on 28 August a joint UAP-Country meeting chose Fadden as Coalition leader even though the Country Party was the smaller of the two non-Labor parties. Fadden was duly sworn in as Prime Minister the next day, and also remained Treasurer."
+australia_DSB.2.a:0 "Now we just need a budget"
+australia_DSB.3.t:0 "John Curtin Takes the Lead"
+australia_DSB.3.d:0 "Curtin had refused Menzies' initial offer to form a wartime 'national government', partly because he feared that it would split the Labor Party, although he did agree to join the Advisory War Council. In October 1941, Arthur Coles and Alexander Wilson, the two independent MPs who had been keeping the Coalition in office since 1940 (first under Menzies, then under Fadden), joined forces with Labor in defeating Fadden's budget and bringing the government down. Governor-General Lord Gowrie was reluctant to call an election for a Parliament barely a year old, especially given the international situation. He summoned Coles and Wilson and made them promise that if he named Curtin prime minister, they would support him for the remainder of the Parliament to end the instability in government. The independents agreed, and Curtin was sworn in as prime minister on 7 October, aged 56. He became the first and only prime minister to come from Western Australia"
+australia_DSB.3.a:0 "For stability, Curtin must lead"
+australia_DSB.4.t:0 "Second Australian Imperial Force"
+australia_DSB.4.d:0 "In the Great War Australian troops worked as an extension of the British army until late in the war, this time we will operate with greater independence to manage both our resources and military forces concerning the war effort. "
+australia_DSB.4.a:0 "Prepare for Asia"
+australia_DSB.4.b:0 "Prepare for Europe"
+australia_DSB.5.t:0 "Reconsider AIF Commitment"
+australia_DSB.5.d:0 "The war has developed in such unforeseen ways, that we must now rethink our deployment of forces."
+australia_DSB.5.a:0 "Reinforce Asia"
+australia_DSB.5.b:0 "Reinforce Eruope"
+australia_DSB.6.t:0 "Battle of Australia"
+australia_DSB.6.d:0 "  "The fall of Singapore," Curtin announced in a radio address to the nation on the 16th February, "can only be described as Australia's Dunkirk. It will be recalled that the fall of Dunkirk initiated the Battle for Britain. The fall of Singapore opens the Battle for Australia. On its issue depends not merely the fate of this Commonwealth but the frontier of the United States of America and, indeed, all the Americas and, therefore, in a large measure the fate of the British-speaking world." "
+australia_DSB.6.a:0 "Then So Be It"
+australia_DSB.7.t:0 "Australian Armoured Corp"
+australia_DSB.7.d:0 "If we are to develop Australian armour, we must first decide where this armour is to fight. The Sentinel Project is a fine tank but is not fitted for jungle warfare which we would be engaged in if a war was to break out with Japan, however, it is well fitted for a conflict in Europe or North African. "
+australia_DSB.7.a:0 "Continue the Sentinetl Project"
+australia_DSB.7.b:0 "Explore Second Option"
+australia_DSB.8.t:0 "Revolt of the Generals"
+australia_DSB.8.d:0 "The defence of Australia took on a new urgency in December 1941 with the entry of Japan into the war. Within the Army there was a concern that Bennett or Lavarack would be appointed as commander-in-chief. In March 1942, Vasey, Herring and Steele approached the Minister for the Army, Frank Forde, with a proposal that all officers over the age of 50 be immediately retired and Major General Horace Robertson be appointed commander-in-chief."
+australia_DSB.8.a:0 "Blamey will take this Appointment"
