--- a/localisation/misterjaypfu_ideas_l_english.yml
+++ b/localisation/misterjaypfu_ideas_l_english.yml
@@ -39,3 +39,37 @@
     yarrow_design:0 "Overseas Empire Fleet Designer"
     johnbrown_design:0 "Special Submarine Project Designer"
     sov_naval_design:0 "Coastal Convoy Defense Designer"
+
+    minister_info:0 "Minister for Information"
+    AST_arthur_calwell_desc:0 "Calwell was appointed as Minister for Information in the Second Curtin Ministry following the 1943 election, and became well known for his tough attitude towards the Australian press and his strict enforcement of wartime censorship. This earned him the enmity of large sections of the Australian press, and he was dubbed "Cocky" Calwell by his political foes, cartoonists of the period depicting him as an obstinate Australian cockatoo."
+    minister_external_affairs:0 "Minister for External Affairs"
+    minister_external_affairs_desc:0 "The minister is usually one of the most senior members of Cabinet – the position is equivalent to that of Secretary of State for Foreign and Commonwealth Affairs in Britain or Secretary of State in the United States."
+    attorney_general:0 "Attorney-General"
+    attorney_general_desc:0 "The Attorney-General is usually a member of the Federal Cabinet, but need not be. Under the Constitution, they are appointed by the Governor-General on the advice of the Prime Minister, and serve at the Governor-General's pleasure. In practice, the Attorney-General is a party politician and their tenure is determined by political factors. By convention, but not constitutional requirement, the Attorney-General is a lawyer by training (either a barrister or solicitor)."
+    minority_government:0 "Minority Government"
+    pig_iron_bob:0 "Pig Iron Bob"
+    pig_iron_bob_desc:0 "It was during the Dalfram Dispute that the title "Pig Iron Bob" was coined in reference to the then Attorney General Robert Menzies."
+    peace_time_rearmer:0 "Peace Time Rearmer"
+    war_time_prime_minister:0 "Wartime Prime Minister"
+    failing_government:0 "Collapsing Government"
+    AST_army_1:0 "Australian Militia"
+    AST_army_2:0 "Australian Militia"
+    AST_army_3:0 "Australian Militia"
+    AST_army_4:0 "Australian Militia"
+    AST_imperial_force_recruitment:0 "Royal Australian Army Recruitment"
+    pig_iron_sale:0 "Pig Iron Sold"
+
+    AST_low_defence_spending:0 "Low Defence Spending"
+
+    AST_white_policy:0 "White Australia Policy"
+    AST_white_policy_desc:0 "The term White Australia policy was widely used to encapsulate a set of historical policies that aimed to forbid people of non-European ethnic origin, especially Asians (primarily Chinese) and Pacific Islanders from immigrating to Australia, starting in 1901. Governments progressively dismantled such policies between 1949 and 1973."
+
+
+    AST_asia:0 "Asian Commitment"
+    AST_europe:0 "European Commitment"
+    AST_mackay:0 "Iven Mackay"
+    AST_robertson:0 "Horace Robertson"
+    AST_northcott:0 "John Northcott"
+    AST_blamey:0 "Thomas Blamey"
+    AST_billy:0 "Billy Hughes"
+    AST_billy_desc:0 "Hughes, a tiny, wiry man, with a raspy voice and an increasingly wizened face, was an unlikely national leader, but during the First World War he acquired a reputation as a war leader—the troops called him the "Little Digger"—that sustained him for the rest of his life. He is remembered for his outstanding political and diplomatic skills, for his many witty sayings, and for his irrepressible optimism and patriotism. At the same time, the Australian labour movement never forgave him for defecting to the conservatives, and still considers him a "rat.""
