--- a/localisation/misterjaypfu_focus_l_english.yml
+++ b/localisation/misterjaypfu_focus_l_english.yml
@@ -1,3 +1,39 @@
 ﻿l_english:
     AST_annex_new_zealand:0 "Annex New Zealand"
     AST_annex_new_zealand_desc:0 "New Zealand is an ai and is useless. Thus we will finally put the Kiwi's in their place."
+    AST_prepare_second_aif:0 "Prepare the Second AIF"
+    AST_prepare_second_aif_desc:0 ""
+    AST_infantry_corp:0 "RA Infantry Corp"
+    AST_infantry_corp_desc:0 ""
+    AST_arty_corp:0 "RA Artillery Corp"
+    AST_arty_corp_desc:0 ""
+    AST_engineer_corp:0 "RA Engineer Corp"
+    AST_engineer_corp_desc:0 ""
+    AST_armoured_corp:0 "RA Armoured Corp"
+    AST_armoured_corp_desc:0 ""
+    AST_recruit_military:0 "Expand Militay Recruitment"
+    AST_recruit_military_desc:0 ""
+    AST_double_defence_budget:0 "Increase Defence Spending"
+    AST_double_defence_budget_desc:0 ""
+    AST_near_north:0 "Near North"
+    AST_near_north_desc:0 "What Great Britain calls the Far East is to us the near north."
+    AST_far_west:0 "Far West"
+    AST_far_west_desc:0 ""
+    AST_italian_tanks:0 "Lesson of Operation Compass"
+    AST_italian_tanks_desc:0 ""
+    AST_light_horse:0 "Legacy of the Light Horse"
+    AST_light_horse_desc:0 ""
+    AST_chief_of_the_army:0 "Appoint Chief of the Army"
+    AST_chief_of_the_army_desc:0 ""
+    AST_chocolate_soldiers:0 "Allow the Deployment of Militia to New guinea"
+    AST_chocolate_soldiers_desc:0 ""
+    AST_lose_of_singapore:0 "Fall of Singapore"
+    AST_lose_of_singapore_desc:0 ""
+    AST_swpa_command:0 "Allied Land Forces HQ"
+    AST_swpa_command_desc:0 ""
+    AST_kokoda_track:0 "Kododa Track Campaign"
+    AST_kokoda_track_desc:0 ""
+    AST_brisbane_line:0 "Brisbane Line Proposal"
+    AST_brisbane_line_desc:0 ""
+    AST_second_imperial_force:0 "Form Second Imperial Force"
+    AST_second_imperial_force_desc:0 ""
